9_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: app1.local
          http:
              paths:
                  - path: /v1/api
                    pathType: Prefix
                    backend:
                        service:
                            name: nginx-service-1
                            port:
                                number: 80
        - host: app2.local
          http:
              paths:
                  - path: /v2/api
                    pathType: Prefix
                    backend:
                        service:
                            name: nginx-service-2
                            port:
                                number: 80
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-service-1
spec:
    type: NodePort
    selector:
        app: nginx-pod-1
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment-1
    labels:
        app: nginx-deployment-1
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx-pod-1
    template:
        metadata:
            labels:
                app: nginx-pod-1
        spec:
            containers:
                - image: nginx:1.25.3
                  name: nginx
                  ports:
                      - containerPort: 80
                        name: http
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-service-2
spec:
    type: NodePort
    selector:
        app: nginx-pod-2
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment-2
    labels:
        app: nginx-deployment-2
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx-pod-2
    template:
        metadata:
            labels:
                app: nginx-pod-2
        spec:
            containers:
                - image: nginx:1.25.3
                  name: nginx
                  ports:
                      - containerPort: 80
                        name: http
